background layout bug on mobile #15

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,7 @@
   font-family: pokemonFontSolid;
   src: url("../resources/fonts//pokemon-solid.ttf");
 }
-html {
-  height: 100vh;
-}
+
 /* background image */
 body {
   background-image: url("../resources/background.jpg");
@@ -17,7 +15,7 @@ body {
   background-attachment: fixed;
   background-size: 100vw 100vh;
   font-family: pokemonFontSolid;
-  height: 100vh;
+  background-position: fixed;
 }
 
 .navbar {
